pull data from CRM

--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
   </div>
   <script>
     var user = 'victor';
-    var deal = '92529';
+    var deal_id = '92529';
     var deal_name = 'DEAL DE PRUEBA';
+    var patient_name = 'Jose Dubal';
     var crm = 'dds';
+    var department = 'department';
   </script>
   <script type="module" src="/src/main.js"></script>
 </body>
